--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "react": "^16.8.6",
     "react-awesome-button": "^6.1.2",
     "react-dom": "^16.8.6",
+    "react-items-carousel": "^2.3.6",
     "react-parallax": "^2.2.0",
     "react-scripts": "3.0.1",
-    "react-scroll-parallax": "^2.1.2"
+    "react-scroll-parallax": "^2.1.2",
+    "react-skillbars": "^1.5.1",
+    "react-ui-cards": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-alice-carousel": "^1.13.13"
   }
 }
